--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ngrx/entity": "^17.2.0",
     "@ngrx/store": "^17.2.0",
     "@ngrx/store-devtools": "^17.2.0",
+    "ngx-spinner": "^17.0.0",
     "primeng": "^17.18.8",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
